<resources>
    <string name="app_name" translatable="false">iUOB 2</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="about_github" translatable="false">iUOB-2@GitHub</string>
    <string name="about_email" translatable="false">aliateeq95@gmail.com</string>
    <string name="about_twitter" translatable="false">\@aliyusuf_95</string>
    <string name="about_website" translatable="false">iuob.net</string>
    <string name="row_icon" translatable="false">row icon</string>
    <string name="sakheer">Sakheer</string>
    <string name="isa_town">Isa Town</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_normal">Normal</string>
    <string name="row_section_time">Time</string>
    <string name="row_section_room">Room</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_notification">Notification</string>
    <string name="row_section_date">Dates</string>
    <string name="fragment_add_courses">Add Courses</string>
    <string name="menu_add">Add</string>
    <string name="dialog_add_course_title">Add course</string>
    <string name="dialog_add_course_sub_title">Please write the course and section</string>
    <string name="dialog_add_course_text_course_hint">Course e.g: HIST122</string>
    <string name="dialog_add_course_text_section_hint">Section e.g: 01</string>
    <string name="dialog_btn_add">Add</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_course_btn_close">Close</string>
    <string name="row_finalexam_time_final">Final Exam:</string>
    <string name="row_finalexam_time_no_exam">No Exam</string>
    <string name="search_title">Search</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_delete_title">Are you sure?</string>
    <string name="dialog_delete_course_sub_title">This course will be deleted from your schedule</string>
    <string name="dialog_delete_story_sub_title">Deleting your story will remove it from UOB Live</string>
    <string name="menu_next">Next</string>
    <string name="fragment_schedule_builder_options">Options</string>
    <string name="activity_sections_filter">Sections Filter</string>
    <string name="menu_done">Done</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_deselect_all">Deselect All</string>
    <string name="menu_deselect_to_be_announced">Deselect [To Be Announced]</string>
    <string name="fragment_schedule_builder_summary">Summary</string>
    <string name="fragment_schedule_builder_schedules">Schedules</string>
    <string name="fragment_time_table">TimeTable</string>
    <string name="share">Share</string>
    <string name="fragment_schedule_details">Schedule Details</string>
    <string name="copy">Copy</string>
    <string name="semester">Semester</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="summer">Summer</string>
    <string name="course">Course</string>
    <string name="course_hint">HIST122</string>
    <string name="possible_combinations">Possible Combinations</string>
    <string name="zero">0</string>
    <string name="combination_error">Should be less than 20000</string>
    <string name="working_days">Working Days</string>
    <string name="any">Any</string>
    <string name="uth">UTH</string>
    <string name="mw">MW</string>
    <string name="umth">UMTH</string>
    <string name="utwh">UTWH</string>
    <string name="start_at">Start At</string>
    <string name="time_9_am">9 AM</string>
    <string name="time_10_am">10 AM</string>
    <string name="time_11_am">11 AM</string>
    <string name="time_12_pm">12 PM</string>
    <string name="finish_at">Finish At</string>
    <string name="time_1_pm">1 PM</string>
    <string name="time_2_pm">2 PM</string>
    <string name="time_3_pm">3 PM</string>
    <string name="lectures_location">Lectures Location</string>
    <string name="sections_filter">Sections Filter</string>
    <string name="schedules_found">Schedules Found</string>
    <string name="calculating">Calculating …</string>
    <string name="u">U</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="h">H</string>
    <string name="summary">Summary</string>
    <string name="email">Email</string>

    <!-- Photo Edit SDK -->
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_id_hint">e.g. 201444285</string>
    <string name="password">Password</string>
    <string name="optionals">Optionals</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="lbl_to_signup">Don\'t have an account? Signup</string>
    <string name="signup">Signup</string>
    <string name="lbl_to_login">Have an account? Login</string>
    <string name="lbl_signup_bottom_sentence">Create an account so you can add stories and access other features.</string>
    <string name="gender">Gender</string>
    <string name="college">College</string>
    <string name="required">Required</string>
    <string name="birthday">Birthday</string>
    <string name="update_info">Update Info</string>
    <string name="logout">Logout</string>
    <string name="iuob_stories">iUOB Stories</string>
    <string name="my_stories">My Stories</string>

    <!-- for cameraFilter_spinner; match with CameraCaptureActivity constants -->
    <string-array name="cameraFilterNames">
        <item>Normal</item>
        <item>Black &amp; white</item>
        <item>Filter: blur</item>
        <item>Filter: sharpen</item>
        <item>Filter: edge detect</item>
        <item>Filter: emboss</item>
    </string-array>

    <!-- for scheduledSwapUpdate_spinner; match with UPDATE_PATTERNS -->
    <string-array name="scheduledSwapUpdateNames">
        <item>15 fps</item>
        <item>24 fps</item>
        <item>25 fps</item>
        <item>30 fps</item>
        <item>48 fps</item>
        <item>60 fps</item>
        <item>erratic 1/5</item>
    </string-array>

    <!-- for scheduledSwapAhead_spinner; match with FRAME_AHEAD -->
    <string-array name="scheduledSwapAheadNames">
        <item>ASAP</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>