<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/done"
        android:title="@string/menu_done"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/select_all"
        android:title="@string/menu_select_all"
        app:showAsAction="never"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/deselect_all"
        android:title="@string/menu_deselect_all"
        app:showAsAction="never"
        android:orderInCategory="3"
        />

    <item
        android:id="@+id/deselect_to_be"
        android:title="@string/menu_deselect_to_be_announced"
        app:showAsAction="never"
        android:orderInCategory="4"
        />
</menu>