<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/dialog_delete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/course_details"
        android:text="@string/dialog_delete_story_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/row_title_text"
        android:gravity="center"
        android:textColor="@color/colorSecondaryText"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dialog_btn_delete"
            style="?android:attr/buttonStyle"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/dialog_btn_cancel"
            style="?android:attr/buttonStyle"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorSecondaryText"/>

    </LinearLayout>

</LinearLayout>