<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    
    <com.muqdd.iuob2.views.Fab
        android:id="@+id/fab"
        style="@style/Widget.MaterialSheetFab.Fab"
        android:src="@drawable/ic_map_24dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <androidx.cardview.widget.CardView
            android:id="@+id/fab_sheet"
            style="@style/Widget.MaterialSheetFab.Sheet">

            <!-- Sheet items -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Recording -->
                <TextView
                    android:id="@+id/terrain"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:text="@string/map_terrain" />

                <!-- Reminder -->
                <TextView
                    android:id="@+id/hybrid"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:text="@string/map_hybrid" />

                <!-- Photo -->
                <TextView
                    android:id="@+id/satellite"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:text="@string/map_satellite" />

                <!-- Note -->
                <TextView
                    android:id="@+id/normal"
                    style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                    android:text="@string/map_normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </io.codetail.widget.RevealLinearLayout>

</RelativeLayout>