<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="TextFields">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="2dp"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="2dp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:gravity="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_sid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="2dp"
                android:text="@string/student_id"/>

            <EditText
                android:id="@+id/txt_sid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_id_hint"
                android:inputType="number"
                android:maxEms="8"
                android:minEms="8"
                android:gravity="end" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_birthday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="5dp"
                android:text="@string/gender"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="false"
                app:ms_enableFloatingLabel="false"
                app:ms_hint="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_birthday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="2dp"
                android:text="@string/birthday"/>

            <EditText
                android:id="@+id/txt_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:focusable="false"
                android:longClickable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:labelFor="@+id/txt_birthday"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="5dp"
                android:text="@string/college"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="false"
                app:ms_enableFloatingLabel="false"
                app:ms_hint="" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_info"
            style="?android:attr/buttonStyle"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>